--- a/flood-monitoring.ipynb
+++ b/flood-monitoring.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests \n",
+    "import requests\n",
     "import urllib\n",
     "from urllib.request import urlopen, Request\n",
     "from bs4 import BeautifulSoup"
@@ -14,57 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = \n",
-    "\n",
-    "\n",
-    "soup = BeautifulSoup(page.content, 'html.parser')"
+    "import streamlit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "page.raise_for_status()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "entries = page.json()['items']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1029TH'"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[0]['stationReference']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,140 +38,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MeasurementTool():\n",
-    "    def __init__(self,):\n",
-    "        self.root='https://environment.data.gov.uk/flood-monitoring'\n",
-    "        self.page_url = self.root + '/id/stations/'\n",
+    "import requests\n",
+    "import datetime as dt\n",
+    "import pandas as pd\n",
+    "from collections import defaultdict\n",
+    "import matplotlib.pyplot as plt\n",
+    "import streamlit as st\n",
+    "\n",
+    "\n",
+    "class MeasurementTool:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "    ):\n",
+    "        self.root = \"https://environment.data.gov.uk/flood-monitoring\"\n",
+    "        self.page_url = self.root + \"/id/stations/\"\n",
     "        self.page = requests.get(self.page_url)\n",
-    "        self.entries = self.page.json()['items']\n",
+    "        self.entries = self.page.json()[\"items\"]\n",
     "        self.stations = self.create_stations_list()\n",
-    "        self.data = defaultdict(lambda: {\"timestamps\": [], \"values\": []})\n",
-    "    \n",
-    "    def retrieve_measurement(self,station_id):\n",
+    "        self.data = {}\n",
+    "\n",
+    "    def retrieve_measure_metadata(self, measure_url):\n",
+    "        measure_page = requests.get(measure_url)\n",
+    "        return measure_page.json()[\"items\"]\n",
+    "\n",
+    "    def retrieve_station_data(self, station_id):\n",
+    "        \"\"\"\n",
+    "        Returns the last 24 hours of recordings for a given station.\n",
+    "        \"\"\"\n",
     "        station_url = self.page_url + station_id\n",
     "        latest_possible_reading_time = self.get_rounded_timestamp()\n",
     "        last_24_hrs = self.subtract_24_hours(latest_possible_reading_time)\n",
     "        station_page = requests.get(station_url + \"/readings?since=\" + last_24_hrs)\n",
     "        station_data = station_page.json()[\"items\"]\n",
     "\n",
-    "        for item in station_data:\n",
-    "            measure_name = \"-\".join(item[\"measure\"].split(\"/\")[-1].split(\"-\")[1:])  # Extract measure name\n",
-    "            timestamp = item[\"dateTime\"]\n",
-    "            value = item[\"value\"]\n",
-    "            self.data[measure_name][\"timestamps\"].append(timestamp)\n",
-    "            self.data[measure_name][\"values\"].append(value)\n",
+    "        for datapoint in station_data:\n",
+    "            measure = \"-\".join(\n",
+    "                datapoint[\"measure\"].split(\"/\")[-1].split(\"-\")[1:]\n",
+    "            )  # Extract measure name\n",
+    "            if measure not in self.data.keys():\n",
+    "                # initialise empty inner dict to hold timestamps,metadata and values\n",
+    "                self.data[measure] = {}\n",
+    "                self.data[measure][\"timestamps\"], self.data[measure][\"values\"] = [], []\n",
+    "                self.data[measure][\"metadata\"] = self.retrieve_measure_metadata(\n",
+    "                    datapoint[\"measure\"]\n",
+    "                )\n",
+    "            timestamp = datapoint[\"dateTime\"]\n",
+    "            value = datapoint[\"value\"]\n",
+    "            self.data[measure][\"timestamps\"].append(timestamp)\n",
+    "            self.data[measure][\"values\"].append(value)\n",
     "\n",
     "    def get_rounded_timestamp(self):\n",
-    "        \"\"\"Returns the current timestamp rounded down to the nearest 15-minute increment.\"\"\"\n",
+    "        \"\"\"\n",
+    "        Returns the current timestamp rounded down\n",
+    "        to the nearest 15-minute increment.\"\"\"\n",
     "        now = dt.datetime.now(dt.timezone.utc)\n",
-    "        rounded_minutes = now.minute - (now.minute % 15)  # Round down to nearest 15-minute mark\n",
+    "        rounded_minutes = now.minute - (\n",
+    "            now.minute % 15\n",
+    "        )  # Round down to nearest 15-minute mark\n",
     "        rounded_time = now.replace(minute=rounded_minutes, second=0, microsecond=0)\n",
     "        return rounded_time.strftime(\"%Y-%m-%dT%H:%M:%SZ\")\n",
     "\n",
-    "    def subtract_24_hours(self,timestamp: str) -> str:\n",
+    "    def subtract_24_hours(self, timestamp: str) -> str:\n",
     "        \"\"\"Subtracts 24 hours from a given timestamp and returns it in the same format.\"\"\"\n",
     "        datetime = dt.datetime.strptime(timestamp, \"%Y-%m-%dT%H:%M:%SZ\")\n",
     "        new_dt = datetime - dt.timedelta(hours=24)\n",
     "        return new_dt.strftime(\"%Y-%m-%dT%H:%M:%SZ\")\n",
-    "         \n",
+    "\n",
     "    def create_stations_list(self):\n",
     "        stations = []\n",
     "        station_ids = []\n",
-    "        for entry in self.entries: \n",
-    "            stations.append(entry['@id'])\n",
-    "            station_ids.append(entry['stationReference'])\n",
+    "        for entry in self.entries:\n",
+    "            stations.append(entry[\"@id\"])\n",
+    "            station_ids.append(entry[\"stationReference\"])\n",
     "        return station_ids\n",
     "\n",
-    "    def plot_measure(self,df):\n",
+    "    def plot_measure(self, df):\n",
+    "        \"\"\"Plots the time series data.\"\"\"\n",
     "\n",
-    "        # Convert timestamp to datetime\n",
-    "        df['timestamps'] = pd.to_datetime(df['timestamps'])\n",
+    "        df.sort_values(by=\"timestamps\", inplace=True)\n",
+    "        df[\"timestamps\"] = pd.to_datetime(df[\"timestamps\"])\n",
     "\n",
     "        # Plot\n",
-    "        plt.figure(figsize=(10, 5))\n",
-    "\n",
+    "        fig, ax = plt.subplots(figsize=(10, 5))\n",
+    "        ax.plot(df[\"timestamps\"], df[\"values\"], marker=\"o\", linestyle=\"-\")\n",
     "\n",
     "        # Formatting\n",
-    "        plt.xlabel(\"Timestamp\")\n",
-    "        plt.ylabel(\"Value\")\n",
-    "        plt.title(\"Time Series Data\")\n",
-    "        plt.xticks(rotation=45)  # Rotate x-axis labels for readability\n",
-    "        plt.grid()\n",
-    "        plt.plot(df['timestamps'], df['values'], marker='o', linestyle='-')\n",
-    "    \n",
+    "        ax.set_xlabel(\"Timestamp\")\n",
+    "        ax.set_ylabel(\"Value\")\n",
+    "        ax.set_title(\"Time Series Data\")\n",
+    "        ax.tick_params(axis=\"x\", rotation=45)  # Rotate x-axis labels for readability\n",
+    "        ax.grid()\n",
+    "        plt.tight_layout()\n",
+    "        st.pyplot(fig)  # Display the plot\n",
     "\n",
-    "    def create_widgets(self):\n",
-    "        global df\n",
-    "        df = None\n",
-    "        # Output widget to display results\n",
-    "        output = widgets.Output()\n",
+    "    def create_name_from_metadata(self, data):\n",
+    "        metadata = data[\"metadata\"]\n",
+    "        return metadata[\"parameterName\"] + \" - \" + metadata[\"qualifier\"]\n",
     "\n",
-    "        # First dropdown for station selection\n",
-    "        station_selector = widgets.Dropdown(\n",
-    "            options=[\" \"] + self.stations,  # List of station IDs with blank\n",
-    "            description=\"Station:\",\n",
-    "            style={'description_width': 'initial'}\n",
-    "        )\n",
     "\n",
-    "        # Second dropdown for measure selection (Initially empty)\n",
-    "        measure_selector = widgets.Dropdown(\n",
-    "            options=[],  # Will be updated dynamically\n",
-    "            description=\"Measure:\",\n",
-    "            style={'description_width': 'initial'}\n",
-    "        )\n",
-    "\n",
-    "        # Button to retrieve data\n",
-    "        fetch_button = widgets.Button(description=\"Retrieve Data\")\n",
-    "\n",
-    "        # Function to update measure selector based on selected station\n",
-    "        def update_measure_selector(change):\n",
-    "            station_id = change.new  # Get newly selected station\n",
-    "            if station_id:\n",
-    "                output.clear_output()\n",
-    "                print(f\"Fetching data for {station_id}...\")\n",
-    "\n",
-    "                # Fetch data for the station (Replace this with your function call)\n",
-    "                self.retrieve_measurement(station_id)  # Your function\n",
-    "                # Update measure dropdown with available measures\n",
-    "                measure_selector.options = [\" \"] + list(self.data.keys())\n",
-    "\n",
-    "        # Attach the function to station dropdown\n",
-    "        station_selector.observe(update_measure_selector, names=\"value\")\n",
-    "\n",
-    "        # Function to handle data retrieval\n",
-    "        def on_data_button_click(b):\n",
-    "            with output:\n",
-    "                output.clear_output()\n",
-    "                station_id = station_selector.value\n",
-    "                measure = measure_selector.value\n",
-    "\n",
-    "                if not station_id:\n",
-    "                    print(\"Please select a station.\")\n",
-    "                    return\n",
-    "                \n",
-    "                if not measure:\n",
-    "                    print(\"Please select a measure.\")\n",
-    "                    return\n",
-    "\n",
-    "                print(f\"Fetching data for {station_id}, measure: {measure}...\")\n",
-    "                \n",
-    "                # Fetch and display data (Replace this with your actual function)\n",
-    "                df = self.data[measure] if measure in self.data else None\n",
-    "                print(df)\n",
-    "                if df is None:\n",
-    "                    print(\"No data available for the selected measure.\")\n",
-    "                else:\n",
-    "                    _ = interact(self.plot_measure(df))\n",
-    "\n",
-    "        # Attach button to function\n",
-    "        fetch_button.on_click(on_data_button_click)\n",
-    "\n",
-    "        # Display widgets\n",
-    "        display(station_selector, measure_selector, fetch_button, output)\n"
+    "# Create an instance of MeasurementTool\n",
+    "tool = MeasurementTool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool.retrieve_station_data(\"1491TH\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'metadata'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tool\u001b[38;5;241m.\u001b[39mdata[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmetadata\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'metadata'"
+     ]
+    }
+   ],
+   "source": [
+    "tool.data[\"metadata\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times = [0, 1, 2, 3, 4, 5]\n",
+    "values = [5, 4, 3, 2, 1, 0]\n",
+    "metadata = {\"id\": 1, \"measure\": \"17\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary = defaultdict(lambda: {\"timestamps\": [], \"values\": []})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary[\"iasd\"][\"metadata\"] = metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "level-stage-i-15_min-mASD\n",
+      "{'@id': 'http://environment.data.gov.uk/flood-monitoring/id/measures/1491TH-level-stage-i-15_min-mASD', 'datumType': 'http://environment.data.gov.uk/flood-monitoring/def/core/datumASD', 'label': 'River Cherwell at Oxford (Kings Mill) - level-stage-i-15_min-mASD', 'latestReading': {'@id': 'http://environment.data.gov.uk/flood-monitoring/data/readings/1491TH-level-stage-i-15_min-mASD/2025-03-08T15-45-00Z', 'date': '2025-03-08', 'dateTime': '2025-03-08T15:45:00Z', 'measure': 'http://environment.data.gov.uk/flood-monitoring/id/measures/1491TH-level-stage-i-15_min-mASD', 'value': 1.532}, 'notation': '1491TH-level-stage-i-15_min-mASD', 'parameter': 'level', 'parameterName': 'Water Level', 'period': 900, 'qualifier': 'Stage', 'station': 'http://environment.data.gov.uk/flood-monitoring/id/stations/1491TH', 'stationReference': '1491TH', 'type': ['http://environment.data.gov.uk/flood-monitoring/def/core/Measure', 'http://environment.data.gov.uk/flood-monitoring/def/core/WaterLevel'], 'unit': 'http://qudt.org/1.1/vocab/unit#Meter', 'unitName': 'mASD', 'valueType': 'instantaneous'}\n",
+      "level-downstage-i-15_min-mASD\n",
+      "{'@id': 'http://environment.data.gov.uk/flood-monitoring/id/measures/1491TH-level-downstage-i-15_min-mASD', 'datumType': 'http://environment.data.gov.uk/flood-monitoring/def/core/datumASD', 'label': 'River Cherwell at Oxford (Kings Mill) - level-downstage-i-15_min-mASD', 'latestReading': {'@id': 'http://environment.data.gov.uk/flood-monitoring/data/readings/1491TH-level-downstage-i-15_min-mASD/2025-03-08T15-45-00Z', 'date': '2025-03-08', 'dateTime': '2025-03-08T15:45:00Z', 'measure': 'http://environment.data.gov.uk/flood-monitoring/id/measures/1491TH-level-downstage-i-15_min-mASD', 'value': 0.874}, 'notation': '1491TH-level-downstage-i-15_min-mASD', 'parameter': 'level', 'parameterName': 'Water Level', 'period': 900, 'qualifier': 'Downstream Stage', 'station': 'http://environment.data.gov.uk/flood-monitoring/id/stations/1491TH', 'stationReference': '1491TH', 'type': ['http://environment.data.gov.uk/flood-monitoring/def/core/Measure', 'http://environment.data.gov.uk/flood-monitoring/def/core/WaterLevel'], 'unit': 'http://qudt.org/1.1/vocab/unit#Meter', 'unitName': 'mASD', 'valueType': 'instantaneous'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in tool.data.keys():\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# measure_metadata = [[\"metadata\"] for i in tool.data]\n",
+    "labels = [tool.create_name_from_metadata(tool.data[i]) for i in tool.data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['level-stage-i-15_min-mASD', 'level-downstage-i-15_min-mASD']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in tool.data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'@id': 'http://environment.data.gov.uk/flood-monitoring/id/measures/1491TH-level-downstage-i-15_min-mASD',\n",
+       " 'datumType': 'http://environment.data.gov.uk/flood-monitoring/def/core/datumASD',\n",
+       " 'label': 'River Cherwell at Oxford (Kings Mill) - level-downstage-i-15_min-mASD',\n",
+       " 'latestReading': {'@id': 'http://environment.data.gov.uk/flood-monitoring/data/readings/1491TH-level-downstage-i-15_min-mASD/2025-03-08T15-45-00Z',\n",
+       "  'date': '2025-03-08',\n",
+       "  'dateTime': '2025-03-08T15:45:00Z',\n",
+       "  'measure': 'http://environment.data.gov.uk/flood-monitoring/id/measures/1491TH-level-downstage-i-15_min-mASD',\n",
+       "  'value': 0.874},\n",
+       " 'notation': '1491TH-level-downstage-i-15_min-mASD',\n",
+       " 'parameter': 'level',\n",
+       " 'parameterName': 'Water Level',\n",
+       " 'period': 900,\n",
+       " 'qualifier': 'Downstream Stage',\n",
+       " 'station': 'http://environment.data.gov.uk/flood-monitoring/id/stations/1491TH',\n",
+       " 'stationReference': '1491TH',\n",
+       " 'type': ['http://environment.data.gov.uk/flood-monitoring/def/core/Measure',\n",
+       "  'http://environment.data.gov.uk/flood-monitoring/def/core/WaterLevel'],\n",
+       " 'unit': 'http://qudt.org/1.1/vocab/unit#Meter',\n",
+       " 'unitName': 'mASD',\n",
+       " 'valueType': 'instantaneous'}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measure_metadata[1]"
    ]
   },
   {
@@ -291,10 +369,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 348,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.MeasurementTool.__init__.<locals>.<lambda>()>,\n",
+       "            {'metadata': {'timestamps': [], 'values': []}})"
+      ]
+     },
+     "execution_count": 348,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tool.data"
+   ]
   },
   {
    "cell_type": "code",
@@ -302,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = tool.retrieve_measurement('1029TH')"
+    "data = tool.retrieve_measurement(\"1029TH\")"
    ]
   }
  ],
